Fix z-index for IE9

--- a/src/scss/partials/_ranges.scss
+++ b/src/scss/partials/_ranges.scss
@@ -2,6 +2,7 @@
 	position: relative;
 
 	margin: -186px 0 0 0;
+	z-index: 1000;
 	.box {
 		min-height: 162px;
 		margin: 0 12px;
